--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,3 +1,4 @@
+
 ---
 layout: archive
 title: "Teaching"
@@ -7,6 +8,10 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
+{% assign grouped = site.teaching | group_by: "institution" %}
+{% for group in grouped %}
+  <h2>{{ group.name }}</h2>
+  {% for post in group.items %}
+    {% include archive-single.html %}
+  {% endfor %}
 {% endfor %}
