--- a/_pages/software.html
+++ b/_pages/software.html
@@ -4,3 +4,8 @@ title: "Software"
 permalink: /software/
 author_profile: true
 ---
+{% include base_path %}
+
+{% for item in site.software reversed %}
+  {% include archive-single.html %}
+{% endfor %}
